5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1635_1055.log
== SUBMITION (2019-04-15 13:06:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio do tanque:"))
x=float(input("altura:"))
opcao=float(input("opcao 1/2?"))
from math import*
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(opcao ==1):
	print(round(V2, 4))
else:
	print(round(V-V2, 4))
-- EXECUTION TIME:
0.261188
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
35200.4985
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
85672.725
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:21:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio do tanque:"))
x=float(input("altura:"))
opcao=float(input("opcao 1/2?"))
from math import*
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(opcao ==1):
	print(round(V2, 4))
else:
	print(round(V-V2, 4))
-- EXECUTION TIME:
0.143911
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
35200.4985
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
85672.725
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:40:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo: "))
D = float(input("distancia: "))
g = 9,8
r=(v0**2)*sin(2a)
R = r/g
				
if abs(D-R) <= 0.1:
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)
			
			
-- EXECUTION TIME:
0.154827
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 7
    D = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:40:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo: "))
D = float(input("distancia: "))
g = 9,8
r=(v0**2)*sin(2a)
R = r/g
				
if abs(D-R) <= 0.1:
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)
			
			
-- ERROR:
File "XXXX", line 7
    D = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:41:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo: "))
D = float(input("distancia: "))
g = 9,8
r=(v0**2)*sin(2a)
R = r/g
				
if abs(D-R) <= 0.1:
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)
			
			
-- EXECUTION TIME:
0.188432
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 7
    D = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:41:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo: "))
D = float(input("distancia: "))
g = 9,8
r=(v0**2)*sin(2a)
R = r/g
				
if abs(D-R) <= 0.1:
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)
			
			
-- ERROR:
File "XXXX", line 7
    D = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:42:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo: "))
D = float(input("distancia: "))
g = 9,8
r=(v0**2)*sin(2a)
R = r/g
				
if abs(D-R) <= 0.1:
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)		
-- ERROR:
File "XXXX", line 7
    D = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:42:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo: "))
d = float(input("distancia: "))
g = 9,8
r=(v0**2)*sin(2a)
R = r/g
				
if abs(d-R) <= 0.1:
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)		
-- ERROR:
File "XXXX", line 7
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:43:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo: "))
d = float(input("distancia: "))
g = 9,8
r=(v0**2)*sin(2a)
R = r/g
				
if abs(d-R) <= 0.1:
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)		
-- ERROR:
File "XXXX", line 7
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:46:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo: "))
d = float(input("distancia: "))
g = 9,8
r=(v0**2)*sin(2a)
R = r/g
				
if abs(d-R) <= 0.1:
	mensagem = "sim"
	print(mensagem)
else:
	mensagem = "nao"
	print(mensagem)		
-- EXECUTION TIME:
0.138397
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 7
    d = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
